--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
+    "@capacitor/cli": "^1.5.0",
+    "@capacitor/core": "^1.5.0",
     "@ionic-native/barcode-scanner": "^5.20.0",
     "@ionic-native/base64-to-gallery": "^5.20.0",
     "@ionic-native/core": "^5.20.0",
@@ -40,7 +42,7 @@
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.801.2",
-    "@angular-devkit/build-angular": "^0.803.23",
+    "@angular-devkit/build-angular": "^0.803.24",
     "@angular-devkit/core": "~8.1.2",
     "@angular-devkit/schematics": "~8.1.2",
     "@angular/cli": "^8.3.23",
