--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "@angular/common": "~8.1.2",
     "@angular/compiler": "~8.1.2",
     "@angular/core": "~8.1.2",
+    "@angular/fire": "^5.4.2",
     "@angular/forms": "~8.1.2",
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
-    "@capacitor/cli": "^1.5.0",
-    "@capacitor/core": "^1.5.0",
+    "@capacitor/core": "1.5.2",
     "@ionic-native/barcode-scanner": "^5.20.0",
     "@ionic-native/base64-to-gallery": "^5.20.0",
     "@ionic-native/core": "^5.20.0",
@@ -29,12 +29,18 @@
     "@ionic-native/splash-screen": "^5.20.0",
     "@ionic-native/status-bar": "^5.20.0",
     "@ionic/angular": "^4.11.10",
+    "@ionic/pwa-elements": "^1.5.2",
+    "angularfire2": "^5.4.2",
+    "bootstrap": "^4.4.1",
     "cordova-browser": "^6.0.0",
     "cordova-plugin-badge": "^0.8.8",
     "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-local-notification": "^0.9.0-beta.2",
     "core-js": "^2.6.11",
+    "firebase": "^7.9.3",
+    "ionic4-auto-complete": "^2.6.0",
     "ngx-qrcode2": "0.0.9",
+    "querybase": "^0.6.0",
     "rxjs": "^6.5.4",
     "rxjs-compat": "^6.5.4",
     "tslib": "^1.9.0",
@@ -49,6 +55,7 @@
     "@angular/compiler": "~8.1.2",
     "@angular/compiler-cli": "~8.1.2",
     "@angular/language-service": "~8.1.2",
+    "@capacitor/cli": "1.5.2",
     "@ionic/angular-toolkit": "~2.0.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "^2.0.8",
