--- a/functions/package.json
+++ b/functions/package.json
@@ -12,11 +12,12 @@
     "node": "8"
   },
   "dependencies": {
-    "firebase-admin": "^8.10.0",
-    "firebase-functions": "^3.6.0",
     "@google-cloud/storage": "^2.3.4",
     "busboy": "^0.2.14",
     "cors": "^2.8.4",
+    "firebase-admin": "^8.10.0",
+    "firebase-functions": "^3.6.0",
+    "twilio": "^3.42.2",
     "uuid": "^3.2.1"
   },
   "devDependencies": {
