--- a/package.json
+++ b/package.json
@@ -25,20 +25,25 @@
     "@ionic-native/barcode-scanner": "^5.20.0",
     "@ionic-native/base64-to-gallery": "^5.20.0",
     "@ionic-native/core": "^5.20.0",
+    "@ionic-native/fcm": "^5.24.0",
     "@ionic-native/local-notifications": "^4.20.0",
+    "@ionic-native/onesignal": "^5.24.0",
     "@ionic-native/splash-screen": "^5.20.0",
     "@ionic-native/status-bar": "^5.20.0",
     "@ionic/angular": "^4.11.10",
+    "@ionic/lab": "^3.1.4",
     "@ionic/pwa-elements": "^1.5.2",
     "angularfire2": "^5.4.2",
     "bootstrap": "^4.4.1",
     "cordova-browser": "^6.0.0",
     "cordova-plugin-badge": "^0.8.8",
     "cordova-plugin-device": "^2.0.3",
+    "cordova-plugin-fcm-with-dependecy-updated": "^6.1.0",
     "cordova-plugin-local-notification": "^0.9.0-beta.2",
     "core-js": "^2.6.11",
     "firebase": "^7.9.3",
     "ionic4-auto-complete": "^2.6.0",
+    "ng2-search-filter": "^0.5.1",
     "ngx-qrcode2": "0.0.9",
     "querybase": "^0.6.0",
     "rxjs": "^6.5.4",
@@ -87,7 +92,8 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-fcm-with-dependecy-updated": {}
     },
     "platforms": [
       "browser"
